--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@ node_modules
 
 # Optional REPL history
 .node_repl_history
+
+# OS metadata
+.DS_Store
+Thumbs.db
+
+# Distribution directories
+dist
