--- a/package.json
+++ b/package.json
@@ -32,11 +32,19 @@
   "engines": {
     "node": ">=6.1.0"
   },
-  "main": "index.js",
+  "main": "./src/app.js",
   "scripts": {
     "start": "node ./src/app",
     "lint": "eslint .",
     "unit": "mocha ./src/**/*.spec.js",
     "test": "npm run lint --silent; npm run unit --silent"
   },
+  "devDependencies": {
+    "chai": "3.5.0",
+    "eslint": "2.10.1",
+    "eslint-config-airbnb-base": "3.0.1",
+    "eslint-plugin-import": "1.8.0",
+    "mocha": "2.4.5",
+    "sinon": "1.17.4"
+  }
 }
