--- a/package.json
+++ b/package.json
@@ -37,14 +37,21 @@
     "start": "node ./src/app",
     "lint": "eslint .",
     "unit": "mocha ./src/**/*.spec.js",
-    "test": "npm run lint --silent; npm run unit --silent"
+    "test": "npm run lint --silent; npm run unit --silent",
+    "nyan": "mocha -R nyan ./src/**/*.spec.js",
+    "coverage": "istanbul cover _mocha --report lcovonly -- -R spec ./src/**/*.spec.js",
+    "delete-coverage": "./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "coveralls": "npm run coverage && cat ./coverage/lcov.info | npm run delete-coverage"
   },
   "devDependencies": {
     "chai": "3.5.0",
+    "coveralls": "2.11.9",
     "eslint": "2.10.1",
     "eslint-config-airbnb-base": "3.0.1",
     "eslint-plugin-import": "1.8.0",
+    "istanbul": "0.4.3",
     "mocha": "2.4.5",
+    "mocha-lcov-reporter": "1.2.0",
     "sinon": "1.17.4"
   }
 }
