--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "unit": "mocha ./src/**/*.spec.js",
     "test": "npm run lint --silent; npm run unit --silent",
     "nyan": "mocha -R nyan ./src/**/*.spec.js",
-    "coverage": "istanbul cover _mocha --report lcovonly -- -R spec ./src/**/*.spec.js",
+    "test-coverage": "istanbul cover _mocha --report lcovonly -- -R spec ./src/**/*.spec.js",
     "delete-coverage": "./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
-    "coveralls": "npm run coverage && cat ./coverage/lcov.info | npm run delete-coverage"
+    "coveralls": "npm run test-coverage && cat ./coverage/lcov.info | npm run delete-coverage"
   },
   "devDependencies": {
     "chai": "3.5.0",
@@ -53,5 +53,14 @@
     "mocha": "2.4.5",
     "mocha-lcov-reporter": "1.2.0",
     "sinon": "1.17.4"
+  },
+  "dependencies": {
+    "body-parser": "1.15.1",
+    "chalk": "1.1.3",
+    "compression": "1.6.2",
+    "express": "4.13.4",
+    "helmet": "2.0.0",
+    "morgan": "1.7.0",
+    "nconf": "0.8.4"
   }
 }
