--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
   "scripts": {
     "start": "node ./src/app",
     "lint": "eslint .",
-    "unit": "mocha ./src/**/*.spec.js",
-    "test": "npm run lint --silent; npm run unit --silent",
-    "nyan": "mocha -R nyan ./src/**/*.spec.js",
-    "test-coverage": "istanbul cover _mocha --report lcovonly -- -R spec ./src/**/*.spec.js",
-    "delete-coverage": "./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
-    "coveralls": "npm run test-coverage && cat ./coverage/lcov.info | npm run delete-coverage"
+    "unit": "mocha ./**/*.spec.js",
+    "pretest": "npm run lint",
+    "test": "npm run unit",
+    "nyan": "mocha -R nyan ./**/*.spec.js",
+    "coverage": "istanbul cover _mocha --report lcovonly -- -R nyan ./**/*.spec.js",
+    "precoveralls": "npm run coverage",
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
+    "postcoveralls": "rm -rf ./coverage"
   },
   "devDependencies": {
     "chai": "3.5.0",
