--- a/.eslintrc
+++ b/.eslintrc
@@ -7,9 +7,6 @@
   },
   "rules": {
     "comma-dangle": [2, "only-multiline"],
-    "semi": [2, "never"],
-    "consistent-return": 0,
-    "no-console": 0,
-    "no-shadow": 0
+    "semi": [2, "never"]
   }
 }
