--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "istanbul": "0.4.3",
     "mocha": "2.4.5",
     "mocha-lcov-reporter": "1.2.0",
-    "sinon": "1.17.4"
+    "sinon": "1.17.4",
+    "supertest": "1.2.0"
   },
   "dependencies": {
     "body-parser": "1.15.1",
